k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watson-speech-to-text-frontend-deployment
  labels:
    app: watson-speech-to-text-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: watson-speech-to-text-frontend
  template:
    metadata:
      labels:
        app: watson-speech-to-text-frontend
    spec:
      containers:
        - name: watson-speech-to-text-frontend
          image: quay.io/wataru_nishiki1_ibm/watson-speech-to-text-frontend:0.1.0
          imagePullPolicy: Always
          ports:
            - name: http-listener
              containerPort: 5000
              protocol: TCP
